@@ -9,6 +9,10 @@ TODO: avoid MPG123_NEED_MORE from non-feed reader reading frame
 bodies or see it as a feature
 - Starting to intentionally use C99 in the codebase. API headers are still
   supposed to be compatible to C89.
+- There is a make check target now that tests some text transformations.
+  It is an open question how that should be developed in relation to the
+  external regression and compliance test suite. Maybe some really small
+  example streams and decode tests will follow.
 - AUTORS now in UTF-8;-)
 - CMake build files in ports/cmake, as an alternative to create MSVC
   project files and the like (thanks to Vitaly Kirsanov)
